# job_parser

./: README.md  data.txt  main.py  main_utils.py  user_file.py
settings/: implemented.py  pyproject.toml
src/: hh.py  job.py  json_class.py  main_utils.py  salary_conversion.py  sort_vacancies.py  superjob.py  user_functions.py  vacancy.py
