[tool.poetry]
name = "job-parser"
version = "0.1.0"
description = ""
authors = ["katyssha <118836572+katyssha@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "job_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
